# pipecat-demo

./: 19daily-openai-realtime-beta.py  19livekit-openai-realtime-beta.py  25daily-openai4o-openaitts.py  25daily_openaiwhisper.py  25fastWhisperTurbo-openai4o-openaitts.py  25hfLocalWhisperTurbo-openai4o-openaitts.py  25livekit_openaiwhisper.py  25localBaseWhisper-openai4o-openaitts.py  25localLargeV2Whisper-openai4o-openaitts.py  25localLargeWhisper-openai4o-openaitts.py  25localMediumWhisper-openai4o-openaitts.py  25localWhisper-openai4o-openaitts.py  25openaiWhisper-openai4o-openaitts.py  25whisper-openai4o-openaitts.py  ai_services.py  dockerfile  pyproject.toml  whisperopenai.py
